--- a/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
+++ b/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
@@ -47,7 +47,10 @@
     <h2 style="color: grey">Empleados encontrados</h2>
   </mat-card-header>
 
-  <mat-card>
+  <!-- loading -->
+  <div class="lds-spinner-wrapper" *ngIf="empleados.length == 0"><div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
+
+  <mat-card *ngIf="empleados.length > 0">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
