--- a/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.scss
+++ b/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.scss
@@ -35,3 +35,10 @@
   max-height: 100%;
   border-radius: 10px;
 }
+
+.pixels-data {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 20px;
+  color: #aaa;
+}
