--- a/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
+++ b/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
@@ -1,4 +1,12 @@
-<div class="container py-3 col-xl-11">
+<div class="lds-spinner-wrapper" *ngIf="isSearchingConfiguration">
+  <div class="lds-spinner">
+    <div></div><div></div><div></div><div></div>
+    <div></div><div></div><div></div><div></div>
+    <div></div><div></div><div></div><div></div>
+  </div>
+</div>
+
+<div *ngIf="!isSearchingConfiguration" class="container py-3 col-xl-11">
   <mat-card class="mat-elevation-z12 p-4">
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
