estructura componente registrar venta

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -1,1 +1,12 @@
-<p>registrar-venta works!</p>
+<div class="container py-3">
+  <div class="row">
+  <div class="col-7">
+    <mat-card class="p-4">
+    </mat-card>
+  </div>
+  <div class="col">
+    <mat-card class="p-4">
+    </mat-card>
+  </div>
+  </div>
+</div>
