estructura componente registrar venta

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -1,12 +1,19 @@
 <div class="container py-3">
   <div class="row">
-  <div class="col-7">
-    <mat-card class="p-4">
-    </mat-card>
-  </div>
-  <div class="col">
-    <mat-card class="p-4">
-    </mat-card>
-  </div>
+    <!-- Lista de productos -->
+    <div class="col-7">
+      <mat-card class="p-4">
+      </mat-card>
+    </div>
+
+    <!-- Factura de venta -->
+    <div class="col">
+      <mat-card class="p-4">
+        <h2>Factura de venta</h2>
+        <mat-divider></mat-divider>
+
+
+      </mat-card>
+    </div>
   </div>
 </div>
