--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -11,7 +11,29 @@
       <mat-card class="p-4">
         <h2>Factura de venta</h2>
         <mat-divider></mat-divider>
+        <br>
+        <div class="row">
+          <div class="col">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Lista de precio</mat-label>
+              <mat-select>
+                <mat-option>
 
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="col">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Numeración</mat-label>
+              <mat-select>
+                <mat-option>
+
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
 
       </mat-card>
     </div>
