estructura componente registrar venta

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -35,6 +35,24 @@
           </div>
         </div>
 
+        <div class="row">
+          <div class="col-9">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Cliente</mat-label>
+              <mat-select>
+                <mat-option>
+
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="col-3">
+            <button mat-stroked-button color="warn" class="btn round h-75">
+              <mat-icon>add</mat-icon> Nuevo
+            </button>
+          </div>
+        </div>
+
       </mat-card>
     </div>
   </div>
