estructura barra de busqueda

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -3,6 +3,12 @@
     <!-- Lista de productos -->
     <div class="col-7">
       <mat-card class="p-4">
+        <div class="row">
+          <div class="col-1">l</div>
+          <div class="col-1">b</div>
+          <div class="col-7">buscar</div>
+          <div class="col-3">add</div>
+        </div>
       </mat-card>
     </div>
 
