mostrar la cantidad de seleccion de productos

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -45,7 +45,7 @@
                    style="border-radius: 10px; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1); position: relative;">
 
                 <!-- Círculo con el número en la esquina superior derecha -->
-                <div *ngIf="producto.cantidadSeleccionada != 0"
+                <div *ngIf="producto.seleccionadoParaVenta"
                      style="position: absolute; top: -10px; right: -10px; background-color: #e15b35; color: white;
                   border-radius: 50%; width: 30px; height: 30px; display: flex;
                   justify-content: center; align-items: center; font-size: 14px; box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);">
