mostrar cantidada de productos totales

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -166,7 +166,7 @@
 
         <mat-divider></mat-divider>
         <br>
-        <p style="color: grey; font-weight: 500">0 productos</p>
+        <p style="color: grey; font-weight: 500">{{productosSeleccionados.length}} Producto</p>
         <br>
         <!-- Botones -->
         <button mat-raised-button color="accent" class="btn round" id="btnBuscar" [disabled]="true">
