--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -133,7 +133,7 @@
         <!-- Producto -->
         <div class="d-flex justify-content-between align-items-center border-bottom pb-2 mb-3">
           <div>
-            <h5 class="m-0">Producto 2</h5>
+            <h4 class="m-0">Producto 2</h4>
             <small class="text-muted">$148.83</small>
           </div>
           <div class="d-flex align-items-center">
@@ -142,7 +142,7 @@
             <button class="btn btn-outline-secondary btn-sm">+</button>
           </div>
           <div class="text-end">
-            <h5 class="m-0">$148.83</h5>
+            <h4 class="m-0"><b>$148.83</b></h4>
           </div>
         </div>
 
