estilo en el subtotal y el total mas iva de la venta

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -133,7 +133,7 @@
         <!-- Producto -->
         <div class="d-flex justify-content-between align-items-center border-bottom pb-2 mb-3">
           <div>
-            <h4 class="m-0">Producto 2</h4>
+            <h5 class="m-0"><b>Producto 2</b></h5>
             <small class="text-muted">$148.83</small>
           </div>
           <div class="d-flex align-items-center">
@@ -142,19 +142,22 @@
             <button class="btn btn-outline-secondary btn-sm">+</button>
           </div>
           <div class="text-end">
-            <h4 class="m-0"><b>$148.83</b></h4>
+            <h5 class="m-0"><b>$148.83</b></h5>
           </div>
         </div>
 
         <!-- Resumen -->
         <div class="border-top pt-3">
-          <div class="d-flex justify-content-between mb-2">
-            <span>Subtotal</span>
-            <span>$123.00</span>
-          </div>
-          <div class="d-flex justify-content-between mb-3">
-            <span>IVA (21.00%)</span>
-            <span>$25.83</span>
+          <div class="p-3 bg-light rounded">
+            <div class="d-flex justify-content-between mb-2">
+              <span>Subtotal</span>
+              <span>$123.00</span>
+            </div>
+            <hr class="dotted-line my-2">
+            <div class="d-flex justify-content-between">
+              <span>IVA (21.00%)</span>
+              <span>$25.83</span>
+            </div>
           </div>
         </div>
 
