--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -146,14 +146,14 @@
         <!-- Resumen -->
         <div class="border-top pt-3">
           <div class="summary-container">
-            <div class="d-flex justify-content-between mb-2">
-              <span>Subtotal</span>
-              <span>$123.00</span>
-            </div>
-            <hr class="dotted-line my-2">
             <div class="d-flex justify-content-between">
-              <span>IVA (21.00%)</span>
-              <span>$25.83</span>
+              <h5 class="text-muted">Subtotal</h5>
+              <h5 class="text-muted"><b>$123.00</b></h5>
+            </div>
+            <hr class="dotted-line">
+            <div class="d-flex justify-content-between">
+              <h5 class="text-muted">IVA (21.00%)</h5>
+              <h5 class="text-muted"><b>$25.83</b></h5>
             </div>
           </div>
         </div>
@@ -164,7 +164,6 @@
           <p>Acá verás los productos que elijas para tu venta</p>
         </div>
 
-        <mat-divider></mat-divider>
         <br>
         <p class="product-count">{{productosSeleccionados.length}} Producto</p>
         <br>
