--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -146,12 +146,12 @@
         <!-- Resumen -->
         <div class="border-top pt-3">
           <div class="summary-container">
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between custom-align-center">
               <h5 class="text-muted">Subtotal</h5>
               <h5 class="text-muted"><b>$123.00</b></h5>
             </div>
             <hr class="dotted-line">
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between custom-align-center">
               <h5 class="text-muted">IVA (21.00%)</h5>
               <h5 class="text-muted"><b>$25.83</b></h5>
             </div>
