--- a/src/app/modules/productos/consultar-productos/consultar-productos.component.html
+++ b/src/app/modules/productos/consultar-productos/consultar-productos.component.html
@@ -2,7 +2,7 @@
   <mat-card class="mat-elevation-z12 p-4">
     <div class="row">
       <div class="d-flex justify-content-between align-items-center w-100">
-        <p class="titulo">Consultar Productos</p>
+        <p class="titulo">Productos</p>
         <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevoProducto()">Registrar nuevo producto</button>
       </div>
     </div>
@@ -29,9 +29,9 @@
           <mat-form-field appearance="outline" class="width-80">
             <mat-label>Tipo Producto</mat-label>
             <mat-select [formControl]="txTipo">
-              <mat-option [value]="1">Jean</mat-option>
-              <mat-option [value]="2">Camisa</mat-option>
-              <mat-option [value]="3">Remera</mat-option>
+              <mat-option *ngFor="let tipoProducto of listaTipoProducto" [value]="tipoProducto.id">
+                {{tipoProducto.nombre}}
+              </mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -39,9 +39,9 @@
           <mat-form-field appearance="outline" class="width-80">
             <mat-label>Proveedor</mat-label>
             <mat-select [formControl]="txProveedor">
-              <mat-option [value]="1">Maria Amores</mat-option>
-              <mat-option [value]="2">Bandida</mat-option>
-              <mat-option [value]="3">Tubos</mat-option>
+              <mat-option *ngFor="let proveedor of listaProveedores" [value]="proveedor.id">
+                {{proveedor.nombre}}
+              </mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -49,9 +49,9 @@
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Marca</mat-label>
             <mat-select [formControl]="txMarca">
-              <mat-option [value]="1">Nike</mat-option>
-              <mat-option [value]="2">Adidas</mat-option>
-              <mat-option [value]="3">Prit Soul</mat-option>
+              <mat-option *ngFor="let marca of listaMarcas" [value]="marca.id">
+                {{marca.nombre}}
+              </mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -71,7 +71,11 @@
   <mat-card-header class="header-card">
     <h2 style="color: grey">Productos encontrados</h2>
   </mat-card-header>
-  <mat-card>
+
+  <!-- loading -->
+  <div class="lds-spinner-wrapper" *ngIf="productos.length == 0"><div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
+
+  <mat-card *ngIf="productos.length > 0">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
